@startuml
title Class Diagram - Use Case: Đặt hàng và Thanh toán
skinparam classAttributeIconSize 0

class OrderController {
  + showCheckoutPage(model: Model): String
  + applyCoupon(req: ApplyCouponRequest): String
  + placeOrder(req: PlaceOrderRequest): String
  + momoReturnCallback(req: MomoCallbackRequest): String
}

class OrderService {
  + prepareCheckoutData(userId: Long): CheckoutData
  + validatePromotion(code: String): Promotion
  + createOrder(req: PlaceOrderRequest, userId: Long): Order
}

class PaymentService {
  + createMomoPaymentUrl(order: Order): String
  + processPaymentResult(transactionId: String, status: PaymentStatus): void
}

class InventoryService {
  + checkAndDeductStock(cartItems: List<CartItem>): void
}

class EmailService {
  + sendOrderConfirmationEmail(order: Order): void
}

class Order {
  - id: Long
  - orderNumber: String
  - orderStatus: OrderStatus
  - totalAmount: BigDecimal
  - discountAmount: BigDecimal
  - shippingAddress: String
  - note: String
}

class OrderItem {
  - id: Long
  - quantity: int
  - price: BigDecimal
}

class Payment {
  - id: Long
  - paymentMethod: String
  - paymentStatus: PaymentStatus
  - transactionId: String
}

class OrderStatusHistory {
  - id: Long
  - status: OrderStatus
  - changeTime: LocalDateTime
}

OrderController --> OrderService : calls
OrderController --> PaymentService : calls
OrderService --> InventoryService : delegates
OrderService --> EmailService : delegates

Order "1" *-- "1..*" OrderItem : contains
Order "1" -- "1" Payment : has
Order "1" *-- "1..*" OrderStatusHistory : tracks

@enduml